// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button.native renders a snapshot 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  onPress={[Function]}
>
  <Styled(View)>
    <Styled(Text)>
      Button
    </Styled(Text)>
  </Styled(View)>
</TouchableOpacity>
`;

exports[`Button.native renders a snapshot with \`color:white\` 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  onPress={[Function]}
>
  <Styled(View)
    color="white"
  >
    <Styled(Text)
      color="white"
    >
      Button
    </Styled(Text)>
  </Styled(View)>
</TouchableOpacity>
`;

exports[`Button.native renders a snapshot with \`disabled\` 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  onPress={[Function]}
>
  <Styled(View)
    disabled={true}
  >
    <Styled(Text)
      disabled={true}
    >
      Button
    </Styled(Text)>
  </Styled(View)>
</TouchableOpacity>
`;

exports[`Button.native renders a snapshot with \`onPress\` 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  onPress={[Function]}
>
  <Styled(View)>
    <Styled(Text)>
      Button
    </Styled(Text)>
  </Styled(View)>
</TouchableOpacity>
`;

exports[`Button.native renders a snapshot with \`primary\` 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  onPress={[Function]}
>
  <Styled(View)
    primary={true}
  >
    <Styled(Text)
      primary={true}
    >
      Button
    </Styled(Text)>
  </Styled(View)>
</TouchableOpacity>
`;

exports[`Button.native renders a snapshot with \`title:Press\` 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  onPress={[Function]}
>
  <Styled(View)>
    <Styled(Text)>
      Press
    </Styled(Text)>
  </Styled(View)>
</TouchableOpacity>
`;
